--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "LargeEpsilon.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.jpg"
+  avatar           : "profile.png"
   name             : "Nicholas Giannoulis"
   pronouns         : # "he/him"
   bio              : "Number Theory Enthusiast, Seinfeld Professional"
